fixes unwanted horizontal scroll

--- a/source/scss/_general.scss
+++ b/source/scss/_general.scss
@@ -110,6 +110,7 @@ code {
 
 .projectName {
 	width: 300px;
+	max-width: 100%;
 
 	input {
 		width: 250px;
